<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTituloResumen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_titulo_resumen"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtComida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_comida"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloResumen" />

    <TextView
        android:id="@+id/txtExtras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtExtras"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtComida" />

    <Button
        android:id="@+id/btnConfirmarPedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_Confirmar_pedido"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExtras" />

    <Button
        android:id="@+id/btnEditarPedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_editar_pedido"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmarPedido" />

</androidx.constraintlayout.widget.ConstraintLayout>