<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeleccionComidaFragment">


    <TextView
        android:id="@+id/txtSeleccion_Comida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_Seleccion_comida"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <RadioGroup
        android:id="@+id/radioGroupComida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtSeleccion_Comida"
        app:layout_constraintBottom_toTopOf="@+id/btn_Siguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <RadioButton
            android:id="@+id/radioPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/op_Pizza" />

        <RadioButton
            android:id="@+id/radioSalchipapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/op_Salchipapa" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/op_Ensalada" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_Siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/radioGroupComida"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />


</androidx.constraintlayout.widget.ConstraintLayout>